--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact Form</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+    <header>
+        <h1>Contact Form</h1>
+        <h3>A simple contact page</h3>
+    </header>
+    <main class="container">
+        <div class="left">
+            
+        </div>
+        <div class="right"></div>
+    </main>
     
 </body>
 </html>
