added contact methods

--- a/index.html
+++ b/index.html
@@ -13,7 +13,20 @@
     </header>
     <main class="container">
         <div class="left">
-            
+            <h2>You can reach me by the following means</h2>
+            <div class="phone-number">
+                <h3>Phone Number:</h3>
+                <span>123-456-7890</span>
+            </div>
+            <div class="email">
+                <h3>Email Address:</h3>
+                <span>someone@gmail.com</span>
+            </div>
+            <div class="address">
+                <h3>Address:</h3>
+                <span>123 Someplace</span>
+                <span>SomeCity, Country, Zip Code</span>
+            </div>
         </div>
         <div class="right"></div>
     </main>
