added links to icons

--- a/index.html
+++ b/index.html
@@ -31,25 +31,25 @@
         </div>
         <div class="right">
             <div class="icon-container">
-                <span><i class="fa-brands fa-linkedin icon"></i></span>
+                <a href="#"><i class="fa-brands fa-linkedin icon"></i></a>
             </div>
             <div class="icon-container">
-                <span><i class="fa-brands fa-x-twitter icon"></i></span>
+                <a href="#"><i class="fa-brands fa-x-twitter icon"></i></a>
             </div>
             <div class="icon-container">
-                <span><i class="fa-brands fa-facebook icon"></i></span>
+                <a href="#"><i class="fa-brands fa-facebook icon"></i></a>
             </div>
             <div class="icon-container">
-                <span><i class="fa-brands fa-instagram icon"></i></span>
+                <a href="#"><i class="fa-brands fa-instagram icon"></i></a>
             </div>
             <div class="icon-container">
-                <span><i class="fa-brands fa-github icon"></i></span>
+                <a href="#"><i class="fa-brands fa-github icon"></i></a>
             </div>
             <div class="icon-container">
-                <span><i class="fa-brands fa-whatsapp icon"></i></span>
+                <a href="#"><i class="fa-brands fa-whatsapp icon"></i></a>
             </div>
             <div class="icon-container">
-                <span><i class="fa-brands fa-discord icon"></i></span>
+                <a href="#"><i class="fa-brands fa-discord icon"></i></a>
             </div>
             
             
