added icons to addresses

--- a/index.html
+++ b/index.html
@@ -16,15 +16,24 @@
         <h2>You can reach me by the following means</h2>
         <div class="section-container"><div class="left">
             <div class="phone-number">
-                <h3>Phone Number:</h3>
+                <div class="contact-icon-container">
+                    <i class="fa-solid fa-phone"></i>
+                    <h3>Phone Number:</h3>
+                </div>
                 <span>123-456-7890</span>
             </div>
             <div class="email">
-                <h3>Email Address:</h3>
+                <div class="contact-icon-container">
+                    <i class="fa-solid fa-envelope"></i>
+                    <h3>Email Address:</h3>
+                </div>
                 <span>someone@gmail.com</span>
             </div>
             <div class="address">
-                <h3>Address:</h3>
+                <div class="contact-icon-container">
+                    <i class="fa-solid fa-envelope"></i>
+                    <h3>Address:</h3>
+                </div>
                 <span>123 Someplace</span>
                 <span>SomeCity, Country, Zip Code</span>
             </div>
