--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
                 <label for="message" >Enter your message:</label>
                 <textarea name="message" id="message" rows="10"  required></textarea>
             </div>
+            <button>Submit</button>
         </form>
     </section>
     </main>
