added line break to address

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <i class="fa-solid fa-envelope"></i>
                         <h3>Address:</h3>
                     </div>
-                    <span>123 Someplace</span>
+                    <span>123 Someplace</span><br />
                     <span>SomeCity, Country, Zip Code</span>
                 </div>
             </div>
