--- a/index.html
+++ b/index.html
@@ -99,5 +99,8 @@
         </form>
     </section>
     </main>
+    <footer>
+        <p>Copyright @Glen Popowich 2024</p>
+    </footer>
 </body>
 </html>
